# profcont

./: .gitlab-ci.yml  CMakeLists.txt  build.sh  ext_entrypoint.hpp  report.tex
extensions/aa/: CMakeLists.txt  report.tex
extensions/aa/src/: main.cpp
extensions/aa/src/entitiles/: chapter.cpp  chapter.hpp
extensions/aa/src/rules/: has_required_chapters.cpp  has_required_chapters.hpp  no_colored_text.cpp  no_colored_text.hpp
scripts/: build.sh  install.sh
src/: main.cpp
src/config/: base_config.hpp  base_config_loader.hpp
src/config/argparse/: argparse.hpp  argparse_config_loader.cpp  argparse_config_loader.hpp
src/exception/: prof_cont_exception.hpp  source_exception.hpp  target_exception.hpp
src/extension/: base_extension.hpp  base_extension_loader.hpp  extension_loader.cpp  extension_loader.hpp
src/rule/: base_rule.hpp  complex_rule.cpp  complex_rule.hpp  no_vowels_rule.cpp  no_vowels_rule.hpp  rule_solution.cpp  rule_solution.hpp
src/source/: base_source.hpp  file_source.cpp  file_source.hpp  source_solution.cpp  source_solution.hpp
src/transformer/: base_transformer.hpp  transformer.cpp  transformer.hpp
